--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -9,6 +9,12 @@
     <!-- 검색용 form 처리 -->
     <form action="/board/list" method="get">
     <div class="col">
+      
+      <div class="mb-3 text-end">
+        <!-- register.html로 이동하는 버튼 -->
+        <a href="/board/register" class="btn btn-primary">새 글 쓰기</a>
+      </div>
+
         <input type="hidden" name="size" th:value="${pageRequestDTO.size}">
         <div class="input-group">
           <div class="input-group-prepend">
@@ -47,10 +53,13 @@
             </thead> <!--테이블 제목 끝-->
 
 
-            <tbody>
+            <tbody th:with="link = ${pageRequestDTO.getLink()}">
               <tr th:each="dto:${responseDTO.dtoList}"> <!-- 배열로 받은 객체를 1개씩 꺼내어 dto로 넣는다. -->
                 <th scope="row">[[${dto.bno}]]</th><!--번호-->
-                <td>[[${dto.title}]]</td>
+                <td>
+                  <a th:href="|@{/board/read(bno =${dto.bno})}&${link}|">[[${dto.title}]]</a>
+                </td>
+                <!--<td>[[${dto.title}]]</td>-->
                 <td>[[${dto.writer}]]</td>
                 <td>[[${#temporals.format(dto.regDate,'yyyy-MM-dd')}]]</td>
               </tr>
@@ -82,6 +91,26 @@
       </div>
     </div>
     </form> <!--from 종료-->
+  </div>
+
+  <div class="modal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+
+        <div class="modal-body">
+          <p>Modal body text goes here.</p>
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -128,5 +157,19 @@
     self.location = '/board/list' // 초기화버튼을 누르면 옵션없이 초기 리스트 보임
 
   }, false) // 버블링
+
+
+  const result = [[${result}]]
+
+  const modal = new bootstrap.Modal(document.querySelector(".modal"))
+
+  if (result){
+    modal.show()
+  }
+
+
+
+
+
 
 </script>
